Do not delete whitespace if at end of wrapping line.

BUG: 90201

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=944121